fixed feedback caused gap on search

--- a/web/static/css/base.css
+++ b/web/static/css/base.css
@@ -78,6 +78,7 @@ button:active {background-color: lightgray;}
     height: 40px;
     display: flex;
     margin-left: 80%;
+    margin-top: -40px;
 }
 
 
